--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello Internet!
+<html>
+  <head>
+    <title> Hello Internet</title>
+  </head>
+  <body>
+    <h1>Hello Internet!</h1>
+    <p>This is Hello world from github page</p>
+  </body>
+</html>
